# fuzzy-ctph-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fuzzy-ctph.slnx  fuzzyhash.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yaml
fuzzy-ctph/: fuzzy-ctph.cpp  fuzzy-ctph.vcxproj  fuzzy-ctph.vcxproj.filters  fuzzy.cpp  fuzzy.h
